--- a/css/dark/form.css
+++ b/css/dark/form.css
@@ -256,6 +256,12 @@ option {
     padding-right: 1.5rem;
 }
 
+select.small {
+    padding: 0 0 0 0.5rem;
+    font-size: 0.9rem;
+    background-position: right 0.5rem center;
+}
+
 /* specific elements */
 
 .register-form .final-action div {
@@ -290,4 +296,8 @@ textarea.signature {
 
 .upload textarea {
     width: 25rem;
+}
+
+.page-selection select {
+    min-width: 4rem;
 }
