hid chat message form when not logged in

--- a/css/default/chat.css
+++ b/css/default/chat.css
@@ -97,3 +97,10 @@
     padding: 0.4rem 1rem;
 }
 
+.chat .chat-footer textarea {
+    display: inline-block;
+    width: 50rem;
+    height: 2.2rem;
+    font-size: 0.9rem;
+}
+
