--- a/css/default/form.css
+++ b/css/default/form.css
@@ -138,6 +138,11 @@ button.primary:hover, .button.primary:hover, input[type="button"].primary:hover,
     border: 1px solid transparent;
 }
 
+input.disabled, button.disabled {
+    opacity: 0.5;
+    cursor: default;
+}
+
 .custom-checkbox-group {
     margin: 1rem 0 1.5rem;
 }
