--- a/css/dark/chat.css
+++ b/css/dark/chat.css
@@ -106,6 +106,11 @@
     padding-left: 3.3rem;
 }
 
+.chat .chat-message .chat-message-content img {
+    max-width: 100%;
+    max-height: 250px;
+}
+
 .chat .chat-footer {
     background-color: #3471AD;
     padding: 1rem;
