--- a/css/default/chat.css
+++ b/css/default/chat.css
@@ -112,6 +112,11 @@
     max-height: 250px;
 }
 
+.chat .chat-message .chat-message-content iframe {
+    width: 240px;
+    height: 160px;
+}
+
 .chat .chat-footer {
     background-color: #096AC9;
     padding: 1rem;
