--- a/css/dark/chat.css
+++ b/css/dark/chat.css
@@ -61,8 +61,10 @@
 }
 
 .chat .chat-messages {
-    max-height: 400px;
+    height: 400px;
+    min-height: 200px;
     overflow-y: auto;
+    resize: vertical;
 }
 
 .chat .chat-message {
