--- a/css/default/chat.css
+++ b/css/default/chat.css
@@ -62,8 +62,10 @@
 }
 
 .chat .chat-messages {
-    max-height: 400px;
+    height: 400px;
+    min-height: 200px;
     overflow-y: auto;
+    resize: vertical;
 }
 
 .chat .chat-message {
