--- a/css/default/main.css
+++ b/css/default/main.css
@@ -12,11 +12,13 @@ body {
     font-family: 'Source Sans Pro', sans-serif;
 }
 
-.main a:link, .main a:visited {
+.main a:link, .main a:visited,
+.chat-excerpt a:link, .chat-excerpt a:visited {
     color: #096AC9;
 }
 
-.main a:hover, .main a:active {
+.main a:hover, .main a:active,
+.chat-excerpt a:hover, .chat-excerpt a:active {
     color: #096AC9;
     background-color: rgba(9, 106, 201, 0.1);
 }
