--- a/css/default/main.css
+++ b/css/default/main.css
@@ -13,12 +13,12 @@ body {
 }
 
 .main a:link, .main a:visited,
-.chat-excerpt a:link, .chat-excerpt a:visited {
+.chat-bar a:link, .chat-bar a:visited {
     color: #096AC9;
 }
 
 .main a:hover, .main a:active,
-.chat-excerpt a:hover, .chat-excerpt a:active {
+.chat-bar a:hover, .chat-bar a:active {
     color: #096AC9;
     background-color: rgba(9, 106, 201, 0.1);
 }
