--- a/css/dark/main.css
+++ b/css/dark/main.css
@@ -12,11 +12,13 @@ body {
     color: #ddd;
 }
 
-.main a:link, .main a:visited {
+.main a:link, .main a:visited,
+.chat-bar a:link, .chat-bar a:visited {
     color: #7EAFE0;
 }
 
-.main a:hover, .main a:active {
+.main a:hover, .main a:active,
+.chat-bar a:hover, .chat-bar a:active {
     color: #93C0ED;
     background-color: rgba(55, 136, 215, 0.33);
 }
