--- a/css/dark/main.css
+++ b/css/dark/main.css
@@ -13,11 +13,13 @@ body {
 }
 
 .main a:link, .main a:visited,
+.footer a:link, .footer a:visited,
 .chat-bar a:link, .chat-bar a:visited {
     color: #7EAFE0;
 }
 
 .main a:hover, .main a:active,
+.footer a:hover, .footer a:active,
 .chat-bar a:hover, .chat-bar a:active {
     color: #93C0ED;
     background-color: rgba(55, 136, 215, 0.33);
@@ -279,4 +281,17 @@ ul.bbcode-list li {
     margin: 0;
     font-size: 0.9rem;
     color: #aaa;
+}
+
+.footer {
+    max-width: 94rem;
+    margin: 0 auto 3rem;
+    border-top: 1px solid #CCC;
+    padding-top: 1rem;
+    text-align: center;
+    font-size: 0.9rem;
+}
+
+.footer a.username {
+    font-weight: bold;
 }
