--- a/css/default/main.css
+++ b/css/default/main.css
@@ -13,11 +13,13 @@ body {
 }
 
 .main a:link, .main a:visited,
+.footer a:link, .footer a:visited,
 .chat-bar a:link, .chat-bar a:visited {
     color: #096AC9;
 }
 
 .main a:hover, .main a:active,
+.footer a:hover, .footer a:active,
 .chat-bar a:hover, .chat-bar a:active {
     color: #096AC9;
     background-color: rgba(9, 106, 201, 0.1);
@@ -276,4 +278,17 @@ ul.bbcode-list li {
     margin: 0;
     font-size: 0.9rem;
     color: #666;
+}
+
+.footer {
+    max-width: 94rem;
+    margin: 0 auto 3rem;
+    border-top: 1px solid #CCC;
+    padding-top: 1rem;
+    text-align: center;
+    font-size: 0.9rem;
+}
+
+.footer a.username {
+    font-weight: bold;
 }
