made chat archive full height

--- a/css/default/chat.css
+++ b/css/default/chat.css
@@ -153,7 +153,10 @@
 }
 
 .chat-archive .chat-messages {
+    height: auto;
+    min-height: unset;
     max-height: none;
+    resize: none;
 }
 
 .chat-bar {
