fixed list element font size in chat&mobile view

--- a/css/common/responsive.css
+++ b/css/common/responsive.css
@@ -6,7 +6,8 @@
 @media screen and (max-width: 64rem) {
 
     /* general */
-    body {
+    body,
+    ul.bbcode-list li {
         font-size: 0.9rem;
     }
 
