--- a/css/default/chat.css
+++ b/css/default/chat.css
@@ -123,6 +123,11 @@ button#send:disabled:hover,
     height: 160px;
 }
 
+.chat .chat-message .chat-message-content ul.bbcode-list li,
+.chat-bar .chat-message .chat-message-content ul.bbcode-list li {
+    font-size: 0.9rem;
+}
+
 .chat .chat-footer {
     background-color: #096AC9;
     padding: 1rem;
