--- a/css/dark/main.css
+++ b/css/dark/main.css
@@ -113,6 +113,14 @@ nav li.active a {
     background-color: rgba(255, 255, 255, 0.25);
 }
 
+nav li.secret-locked a {
+	display: none;
+}
+
+nav li.secret-unlocked a {
+    background-color: rgba(255, 255, 255, 0.15);
+}
+
 nav a:hover {
     background-color: rgba(255, 255, 255, 0.15);
 }
