added new years banner
(phew)

--- a/css/dark/main.css
+++ b/css/dark/main.css
@@ -39,7 +39,7 @@ body {
 }
 
 .banner.celebration {
-    background-image: url('../../img/banner/celebration.png');
+    background-image: url('../../img/banner/anniversary.png');
 }
 
 .grid {
