--- a/css/default/chat.css
+++ b/css/default/chat.css
@@ -231,3 +231,28 @@ button#send {
     display: none;
 }
 
+.chat-message.tiny {
+    height: 1.7rem;
+    overflow-y: hidden;
+    line-height: 1rem;
+}
+
+.chat-message.tiny .avatar {
+    height: 1rem;
+    margin-top: 0;
+}
+
+.chat-message.tiny .chat-topbar {
+    float: left;
+}
+
+.chat-message.tiny .username {
+    font-size: 0.8rem !important;
+}
+
+.chat-message.tiny .chat-message-content {
+    float: left;
+    padding-left: 0.5rem;
+    font-size: 0.8rem;
+}
+
